# Nova

./: .dockerignore  .env.example  .env.staging.example  .gcloudignore  .gitignore  .gitleaks.toml  .gitleaksignore  .infrastructure_index.txt  .markdownlint.json  .pre-commit-config.yaml  .yamllint.yml  007_FINAL_STATUS.md  00_START_HERE.md  ACTUAL_REMAINING_WORK.md  AGENTS.md  AI_REVIEW_IMPLEMENTATION.md  AI_REVIEW_QUICK_START.md  ANALYSIS_EXECUTIVE_SUMMARY.md  ANALYSIS_INDEX.md  API_DOCS_INDEX.md  API_DOCUMENTATION_SUMMARY.md  APNS_CONSOLIDATION_SUMMARY.md  ARCHITECTURE_DECISION_FRAMEWORK.md  ARCHITECTURE_DOCUMENTATION_INDEX.md  ARCHITECTURE_EXECUTIVE_SUMMARY.md  ARCHITECTURE_IMPROVEMENT_PLAN.md  ARCHITECTURE_MICROSERVICES_CLARIFICATION.md  ARCHITECTURE_PHASE_0_PLAN.md  ARCHITECTURE_PHASE_1_OUTLINE.md  ARCHITECTURE_QUICK_REFERENCE.md  ARCHITECTURE_README.md  ARCHITECTURE_REVIEW.md  ARCHITECTURE_REVIEW_2025-11-02.md  ARCHITECTURE_REVIEW_REVISED.md  ARCHITECTURE_REVIEW_SUMMARY.md  ARCHITECTURE_REVISED_STRATEGY.md  ARCHITECTURE_WORK_COMPLETED.md  AUDIT_COMPLETION_REPORT.md  AUDIT_EXECUTIVE_SUMMARY.md  AUTH_SERVICE_DECISION.md  (+370 more)
admin-api/: .env.example  Cargo.toml  Dockerfile
admin-api/migrations/: 001_init.sql  002_user_management.sql  003_content_moderation.sql  004_schema_alignment.sql  005_system_configs.sql
admin-api/src/: error.rs  main.rs
backend/: .env.example  .env.example.s3  .gcloudignore  .gitignore  API_DEPRECATION_POLICY.md  API_DOCUMENTATION_QUICK_START.md  API_GATEWAY_CONFIG.md  API_GATEWAY_DESIGN.md  API_GATEWAY_IMPLEMENTATION_SUMMARY.md  API_GATEWAY_MIGRATION_GUIDE.md  API_GATEWAY_QUICK_REFERENCE.md  AUTH_1013_COMPLETION.md  AUTH_1020_REFACTOR_COVERAGE.md  AUTH_USER_REFACTOR.md  BASELINE_COLLECTION_PLAN.md  BASELINE_INCIDENT_RESPONSE_TEMPLATE.md  CICD_OPTIMIZATION_PHASE8.md  CLAUDE.md  CODE_REVIEW_REPORT.md  Cargo.toml  Cargo.toml.bak  DATABASE_ARCHITECTURE_REVIEW.md  DATABASE_OPTIMIZATION_IMPLEMENTATION_PLAN.md  DATABASE_PERFORMANCE_AUDIT_REPORT.md  DATA_OWNERSHIP_MATRIX.md  DELIVERY_MANIFEST.md  DEPENDENCY_MATRIX.md  DEPENDENCY_SCAN_REPORT.md  DEPLOYMENT_CHECKLIST.md  DEPLOYMENT_FILES_SUMMARY.md  DEPLOYMENT_GUIDE.md  DEPLOYMENT_STATUS.txt  Dockerfile  Dockerfile.content-service  Dockerfile.job_worker  Dockerfile.messaging  Dockerfile.messaging.alt  Dockerfile.messaging.fix  Dockerfile.messaging.runtime  Dockerfile.template  (+84 more)
backend/analytics-service/: Cargo.toml  Dockerfile  build.rs  cloudbuild.yaml
backend/auth-service/: Cargo.toml  Dockerfile  GRPC_TESTING_GUIDE.md  build.rs
backend/benches/: performance_baseline.rs
backend/cdn-service/: Cargo.toml  build.rs
backend/clickhouse/: 002_feed_candidates_tables.sql  004_watch_events_analytics.sql  005_training_data_tables.sql  cdc-schema.sql  init-db.sql  schema.sql
backend/communication-service/: Cargo.toml
backend/connectors/: debezium-postgres-connector.json
backend/content-service/: Cargo.toml  Dockerfile  PERFORMANCE_FIX_CLICKHOUSE_TIMEOUT.md  PHASE2_DEPLOYMENT.md  build.rs  cloudbuild.yaml
backend/docs/: ARCHITECTURE_COMPARISON.md  ARCHITECTURE_QUICK_START.md  ARCHITECTURE_V2_REDESIGN.md  CIRCUIT_BREAKER_AUDIT.md  CODEX_GPT5_ARCHITECTURE_REVIEW.md  CODEX_GPT5_IMPLEMENTATION_STATUS.md  CORRELATION_ID_AUDIT.md  DATABASE_OPTIMIZATION_GUIDE.md  DEPENDENCY_MATRIX.txt  EXECUTIVE_SUMMARY.md  IMPLEMENTATION_GUIDE.md  IMPLEMENTATION_PLAN.md  IMPLEMENTATION_SUMMARY.md  LINUS_ARCHITECTURE_ANALYSIS.md  P0_FIX_JWT_CACHING.md  P0_FIX_KAFKA_TRANSACTIONAL.md  P0_FIX_SERVICE_RESILIENCE.md  P0_FIX_SOFT_DELETE.md  P1_PROTO_VERSIONING_REGISTRY.md  P1_REQUEST_CORRELATION_ID.md  P1_WEBSOCKET_STICKY_SESSIONS.md  PERFORMANCE_AUDIT_EXECUTIVE_SUMMARY.md  PERFORMANCE_AUDIT_STAGING.md  PGPOOL_CONFIGURATION_AUDIT.md  QUICK_WINS_6_7_INTEGRATION.md  QUICK_WINS_6_7_QUICKREF.md  QUICK_WINS_6_7_SUMMARY.md  README.md  README_ANALYSIS.md  README_TEST_AUDIT.md  REMEDIATION_ROADMAP.md  SERVICE_RESTRUCTURING_IMPLEMENTATION.md  STAGING_DEPLOYMENT_FINAL_DECISION.md  TEST_AUDIT_QUICK_REFERENCE.txt  TEST_COVERAGE_AUDIT_PHASE2.md  TEST_FIX_RECOMMENDATIONS.md  TEST_STRATEGY_EXECUTIVE_SUMMARY.md  TIMEOUT_WRAPPER_AUDIT.md  WEEK_5-6_AUDIT_SUMMARY.md  ZITADEL_INTEGRATION_SUMMARY.md  (+4 more)
backend/events-service/: Cargo.toml  build.rs
backend/feature-store/: .env.example  Cargo.toml  Dockerfile  README.md  STRUCTURE.md  build.rs  cloudbuild.yaml
backend/feed-service/: CODE_CHANGES.md  Cargo.toml  Cargo.toml.bak  Dockerfile  REFACTORING_SUMMARY.md  build.rs  cloudbuild.yaml
backend/graph-service/: .env.example  Cargo.toml  Dockerfile  Dockerfile.dual-write  build.rs
backend/graphql-gateway/: Cargo.toml  Dockerfile  Dockerfile.deploy  Dockerfile.fast  Dockerfile.multiarch  PERSISTED_QUERIES.md  build.rs
backend/identity-service/: Cargo.toml  Dockerfile  build.rs  cloudbuild.yaml
backend/infra/: COST_ANALYSIS.md  QUICK_START.md  README.md  SECURITY.md
backend/k8s/: COMPLETE_DEPLOYMENT_TEST_REPORT.md  DEPLOYMENT_GUIDE.md  K8S_CONFIGURATION_VALIDATION_REPORT.md  K8S_DEPLOYMENT_SUMMARY.md  K8S_FILES_INDEX.md  K8S_LOCAL_DEPLOYMENT_GUIDE.md  K8S_QUICK_START.md  LOCAL_DEPLOYMENT_TEST_REPORT.md  QUICK_REFERENCE.md  README.md  deploy-local-k8s.sh  deploy-local-test.sh  generate-manifests.sh  ingress-tls-setup.yaml  ingress.yaml  messaging-service-configmap.yaml  messaging-service-deployment-local.yaml  messaging-service-deployment.yaml  messaging-service-hpa.yaml  messaging-service-pdb.yaml  messaging-service-secret-local.yaml  messaging-service-secret.yaml  messaging-service-service.yaml  microservices-deployments-local.yaml  microservices-deployments.yaml  microservices-secrets.yaml  postgres-ha-statefulset.yaml  prometheus-monitoring-setup.yaml  prometheus-rules.yaml  redis-sentinel-statefulset.yaml  redis-simple-statefulset.yaml  test-connection.sh  video-ranking-deployment.yaml
backend/keys/: private_key.pem  public_key.pem
backend/livekit-agent/: .env.example  Dockerfile  README.md  agent.py  livekit.toml  requirements.txt
backend/load-test/: README.md  database-stress-test.yml  feed-load-test.yml
streaming/: Cargo.toml
(+5386 files in other folders)
