[workspace]
members = [
    # Services
    "backend/auth-service",
    "backend/user-service",
    "backend/content-service",
    "backend/feed-service",
    "backend/media-service",
    "backend/messaging-service",
    "backend/search-service",
    "backend/streaming-service",
    "backend/notification-service",
    "backend/cdn-service",
    "backend/events-service",
    # Shared Libraries
    "backend/libs/actix-middleware",
    "backend/libs/crypto-core",
    "backend/libs/db-pool",
    "backend/libs/error-handling",
    "backend/libs/error-types",
    "backend/libs/event-schema",
    "backend/libs/nova-apns-shared",
    "backend/libs/nova-fcm-shared",
    "backend/libs/grpc-clients",
    "backend/libs/redis-utils",
    "backend/libs/video-core"
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Nova Team <team@nova.dev>"]
license = "MIT"
rust-version = "1.75"

[workspace.dependencies]
# Web framework
actix-web = "4.5"
actix-rt = "2.9"
actix-cors = "0.7"
actix = "0.13"
actix-web-actors = "4.3"

# Async runtime
tokio = { version = "1.36", features = ["full"] }

# Database
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono", "migrate"] }

# Redis
redis = { version = "0.25", features = ["tokio-comp", "connection-manager", "streams"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Utilities
uuid = { version = "1.7", features = ["v4", "v5", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
dotenv = "0.15"
envy = "0.4"
hkdf = "0.12"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-actix-web = "0.7"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Security
argon2 = "0.5"
jsonwebtoken = "9.2"
rand = "0.8"
rsa = { version = "0.9", features = ["sha2"] }
aes-gcm = "0.10"
hmac = "0.12"
qrcode = "0.12"

# Validation
validator = { version = "0.18", features = ["derive"] }

# Email
lettre = { version = "0.11", default-features = false, features = ["tokio1-rustls-tls", "smtp-transport", "builder", "hostname"] }

# Rate limiting
governor = "0.6"

# Metrics
prometheus = { version = "0.13", features = ["process"] }

# AWS SDK
aws-config = "1.1"
aws-sdk-s3 = "1.13"

# Hashing and encoding
sha1 = "0.10"
sha2 = "0.10"
hex = "0.4"

# MIME type detection
mime = "0.3"

# Encoding
base64 = "0.21"

# Async traits
async-trait = "0.1"

# HTTP client
reqwest = { version = "0.12", features = ["json"] }
urlencoding = "2.1"

# ClickHouse and Kafka
clickhouse = { version = "0.12" }
rdkafka = { version = "0.36", features = ["tokio", "cmake-build"] }
neo4rs = "0.8"

# Phase 4: Video Processing
# gRPC for TensorFlow Serving and Milvus
tonic = { version = "0.10", features = ["transport", "tls"] }
prost = "0.12"

# Vector operations for embeddings
ndarray = "0.15"

# HTTP utilities for streaming
http = "0.2"

# ONNX Model Serving
tract-onnx = "0.21"
once_cell = "1.19"

# API Documentation
utoipa = "4.2"
utoipa-swagger-ui = "6.0"

# Testing: Container fixtures for integration tests
testcontainers = "0.17"

[package]
name = "nova"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
tokio = { version = "1.36", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rdkafka = { version = "0.36", features = ["tokio", "cmake-build"] }
clickhouse = { version = "0.12" }
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono"] }
redis = { version = "0.25", features = ["tokio-comp", "connection-manager"] }
reqwest = { version = "0.12", features = ["json"] }
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
tokio-test = "0.4"

[[test]]
name = "core_flow_test"
path = "tests/core_flow_test.rs"
harness = true

[[test]]
name = "known_issues_regression_test"
path = "tests/known_issues_regression_test.rs"
harness = true

[[test]]
name = "performance_benchmark_test"
path = "tests/performance_benchmark_test.rs"
harness = true

[profile.dev]
opt-level = 0
debug = true

[profile.test]
opt-level = 1
