[workspace]
members = [
    # Core Services (V2 Architecture)
    "identity-service",        # Authentication & Authorization (NEW)
    "user-service",            # User Profiles only
    "content-service",         # Posts & Comments
    "social-service",          # Feed, Follows, Likes (NEW - merged feed)
    "media-service",           # Unified Media handling
    "communication-service",   # Messages & Notifications (NEW - merged)
    "search-service",         # Read-only Search Projection
    "events-service",         # Event Bus (Kafka)

    # API Gateway
    "graphql-gateway",        # V2 - Stateless Gateway

    # Shared Libraries
    "libs/db-pool",
    "libs/crypto-core",
    "libs/resilience",        # NEW - Timeouts & Circuit Breakers

    # Proto Definitions
    "proto",
]

# Note: Removed services (archived in archived-v1/):
# - auth-service (replaced by identity-service)
# - feed-service (merged into social-service)
# - messaging-service (merged into communication-service)
# - notification-service (merged into communication-service)
# - video-service (merged into media-service)
# - streaming-service (merged into media-service)
# - cdn-service (merged into media-service)

[workspace.package]
version = "2.0.0"
edition = "2021"
authors = ["Nova Team"]
license = "MIT"
rust-version = "1.76"

[workspace.dependencies]
# Async runtime
tokio = { version = "1.35", features = ["full"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Database
sqlx = { version = "0.7", features = ["runtime-tokio", "postgres", "chrono", "uuid", "migrate"] }
clickhouse = { version = "0.11", features = ["tokio"] }

# gRPC
tonic = "0.10"
prost = "0.12"

# GraphQL
async-graphql = { version = "7.0", features = ["dataloader", "apollo-tracing"] }
async-graphql-actix-web = "7.0"

# Web framework
actix-web = "4.4"
actix-cors = "0.7"
actix-rt = "2.9"

# Tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Authentication
jsonwebtoken = "9.3"
argon2 = "0.5"

# Utilities
uuid = { version = "1.6", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
futures = "0.3"
rand = "0.8"
once_cell = "1.19"
sha2 = "0.10"
hex = "0.4"
aes-gcm = "0.10"
base64 = "0.22"
redis = { version = "0.25", features = ["aio", "tokio-comp"] }
async-trait = "0.1"
config = "0.14"
dotenv = "0.15"
dashmap = "6.1"

# Events
rdkafka = { version = "0.36", features = ["cmake-build"] }

# Testing
serial_test = "3.0"

# Metrics
prometheus = "0.13"

# Rate limiting
governor = "0.6"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true