[workspace]
members = [
    # Core Services (V2 Architecture)
    "identity-service",        # Authentication & Authorization (NEW)
    "user-service",            # User Profiles only
    "content-service",         # Posts & Comments
    "social-service",          # Feed, Follows, Likes (NEW - merged feed)
    "media-service",           # Unified Media handling
    "communication-service",   # Messages & Notifications (NEW - merged)
    "search-service",         # Read-only Search Projection
    "events-service",         # Event Bus (Kafka)

    # API Gateway
    "graphql-gateway",        # V2 - Stateless Gateway

    # Shared Libraries
    "libs/db-pool",
    "libs/crypto-core",
    "libs/resilience",        # NEW - Timeouts & Circuit Breakers
    "libs/aws-secrets",       # AWS Secrets Manager integration
    "libs/grpc-metrics",      # gRPC metrics middleware
    "libs/transactional-outbox", # Transactional Outbox pattern for reliable event publishing
]

# Note: Removed services (archived in archived-v1/):
# - auth-service (replaced by identity-service)
# - feed-service (merged into social-service)
# - messaging-service (merged into communication-service)
# - notification-service (merged into communication-service)
# - video-service (merged into media-service)
# - streaming-service (merged into media-service)
# - cdn-service (merged into media-service)

[workspace.package]
version = "2.0.0"
edition = "2021"
authors = ["Nova Team"]
license = "MIT"
rust-version = "1.76"

[workspace.dependencies]
# Async runtime
tokio = { version = "1.35", features = ["full"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Database
sqlx = { version = "0.7", features = ["runtime-tokio", "postgres", "chrono", "uuid", "migrate"] }
clickhouse = "0.11"

# gRPC
tonic = "0.10"
prost = "0.12"

# GraphQL
async-graphql = { version = "7.0", features = ["dataloader", "apollo-tracing"] }
async-graphql-actix-web = "7.0"

# Web framework
actix = "0.13"
actix-web = "4.4"
actix-cors = "0.7"
actix-rt = "2.9"

# Tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Authentication
jsonwebtoken = "9.3"
argon2 = "0.5"

# Utilities
uuid = { version = "1.6", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
futures = "0.3"
rand = "0.8"
once_cell = "1.19"
lazy_static = "1.4"
pin-project = "1.1"
sha2 = "0.10"
sha1 = "0.10"
hex = "0.4"
hmac = "0.12"
aes-gcm = "0.10"
base64 = "0.22"
mime = "0.3"
qrcode = "0.14"
reqwest = { version = "0.11", features = ["json"] }
urlencoding = "2.1"
validator = "0.16"
utoipa = "4.2"
tracing-actix-web = "0.7"
tonic-health = "0.10"
redis = { version = "0.25", features = ["aio", "tokio-comp"] }
async-trait = "0.1"
config = "0.14"
dotenv = "0.15"
dashmap = "6.1"
envy = "0.4"

# Events
rdkafka = { version = "0.36", features = ["cmake-build"] }

# Testing
serial_test = "3.0"
testcontainers = "0.17"

# Metrics
prometheus = "0.13"

# Rate limiting
governor = "0.6"

# Tower middleware (for gRPC)
tower = "0.4"

# AWS SDK
aws-config = "1.1"
aws-sdk-secretsmanager = "1.13"
aws-sdk-s3 = "1.15"
moka = { version = "0.12", features = ["future"] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true