[workspace]
resolver = "2"
members = [
    # Core Services (V2 Architecture)
    "identity-service",        # Authentication & Authorization (NEW)
    "content-service",         # Posts & Comments
    "social-service",          # Feed, Follows, Likes (NEW - merged feed)
    "media-service",           # Unified Media handling
    "streaming-service",       # RTMP webhooks / live ingest auth
    "notification-service",    # Messages & Notifications (communication-service deleted - empty shell)
    "search-service",         # Read-only Search Projection
    "analytics-service",      # Analytics & Event Bus (Kafka) - renamed from events-service
    "graph-service",          # Graph Database (Neo4j) - Follow/Mute/Block relationships
    "feed-service",           # Recommendation & Feed Generation (Phase A: using graph-service gRPC)
    "feature-store",          # Feature Store Service (Phase D: Ranking + Feature Store)
    "ranking-service",        # Ranking Service (Phase D: Ranking + Feature Store)
    # realtime-chat-service - SEPARATED INTO INDEPENDENT WORKSPACE (2025-12-09)
    # Reason: Matrix SDK 0.16 requires libsqlite3-sys 0.35, conflicts with sqlx 0.8's 0.28
    # Location: backend/realtime-chat-service/ (independent Cargo.toml)
    "trust-safety-service",   # UGC Moderation & Trust Service (Phase F: centralized content moderation)

    # API Gateway
    "graphql-gateway",        # V2 - Stateless Gateway

    # Shared Libraries
    "libs/db-pool",
    "libs/crypto-core",
    "libs/resilience",        # NEW - Timeouts & Circuit Breakers
    "libs/aws-secrets",       # AWS Secrets Manager integration
    "libs/grpc-metrics",      # gRPC metrics middleware
    "libs/grpc-tls",          # gRPC TLS/mTLS configuration
    "libs/grpc-clients",      # Centralized gRPC client pool
    "libs/transactional-outbox", # Transactional Outbox pattern for reliable event publishing
    "libs/idempotent-consumer",  # Idempotent Kafka consumer with PostgreSQL tracking
    "libs/cache-invalidation",   # Redis Pub/Sub cache invalidation for cross-service coherence
    "libs/grpc-health",          # gRPC health check for Kubernetes probes
    "libs/nova-cache",           # Unified caching layer for all services
]

# Note: Removed services (archived in archived-v1/ or deleted):
# - auth-service (replaced by identity-service) [archived]
# - communication-service (empty V2 shell, functionality in notification-service via nova-fcm/apns-shared) [deleted]
# - events-service (renamed to analytics-service)
# - feed-service (merged into social-service) [archived]
# - messaging-service (split into realtime-chat-service + notification-service) [archived - Phase E]
# - video-service (merged into media-service) [archived]
# - streaming-service (now active for RTMP webhooks)
# - cdn-service (merged into media-service) [archived]

[workspace.package]
version = "2.0.0"
edition = "2021"
authors = ["Nova Team"]
license = "MIT"
rust-version = "1.76"

[workspace.dependencies]
# Async runtime
tokio = { version = "1.35", features = ["full"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Database
# Enable `macros` so that sqlx::migrate! and other macros are available.
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "chrono", "uuid", "migrate", "macros"], default-features = false }
clickhouse = "0.11"

# gRPC
tonic = "0.12"
prost = "0.13"
prost-types = "0.13"

# GraphQL
async-graphql = { version = "7.0", features = ["dataloader", "apollo-tracing"] }
async-graphql-actix-web = "7.0"

# Web framework
actix = "0.13"
actix-web = "4.4"
actix-cors = "0.7"
actix-rt = "2.9"

# Tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Authentication
jsonwebtoken = "9.3"
argon2 = "0.5"

# Utilities
uuid = { version = "1.6", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
futures = "0.3"
rand = "0.8"
once_cell = "1.19"
lazy_static = "1.4"
pin-project = "1.1"
sha2 = "0.10"
sha1 = "0.10"
hex = "0.4"
hmac = "0.12"
hkdf = "0.12"
aes-gcm = "0.10"
base64 = "0.22"
mime = "0.3"
qrcode = "0.14"
reqwest = { version = "0.11", features = ["json"] }
urlencoding = "2.1"
validator = "0.20"
utoipa = "5.4"
tracing-actix-web = "0.7"
tonic-health = "0.12"
redis = { version = "0.25", features = ["aio", "tokio-comp", "connection-manager"] }
async-trait = "0.1"
config = "0.14"
dotenvy = "0.15"
dashmap = "6.1"
envy = "0.4"

# Events
rdkafka = { version = "0.36", features = ["cmake-build"] }

# Testing
serial_test = "3.0"
testcontainers = "0.17"

# Metrics
prometheus = "0.13"

# Rate limiting
governor = "0.6"

# Tower middleware (for gRPC)
tower = "0.5"

# AWS SDK
aws-config = "1.1"
aws-sdk-secretsmanager = "1.13"
aws-sdk-s3 = "1.15"
moka = { version = "0.12", features = ["future"] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
