[package]
name = "analytics-service"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
rust-version.workspace = true

[[bin]]
name = "analytics-service"
path = "src/main.rs"

[lib]
name = "analytics_service"
path = "src/lib.rs"

[dependencies]
actix-web.workspace = true
actix-rt.workspace = true
tokio.workspace = true
sqlx.workspace = true
redis.workspace = true
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
chrono.workspace = true
dotenv.workspace = true
envy.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
thiserror.workspace = true
anyhow.workspace = true
async-trait.workspace = true
reqwest.workspace = true
prometheus.workspace = true

# Events-specific
futures = "0.3"
rdkafka.workspace = true
clickhouse.workspace = true

# gRPC
tonic.workspace = true
prost.workspace = true
tonic-health.workspace = true

# Resilience (P0-5)
resilience = { path = "../libs/resilience" }

# TLS/mTLS (P0-1)
grpc-tls = { path = "../libs/grpc-tls" }
rustls = { version = "0.23", default-features = false, features = ["aws_lc_rs", "std", "tls12"] }

# Shared libraries
error-types = { path = "../libs/error-types" }
db-pool = { path = "../libs/db-pool" }

[build-dependencies]
tonic-build = "0.12"

[dev-dependencies]
tokio-test = "0.4"
once_cell = "1.19"
