[package]
name = "auth-service"
version = "0.1.0"
edition = "2021"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["trace", "cors"] }

# Database
sqlx = { version = "0.7", features = ["postgres", "chrono", "uuid", "json"] }
postgres = "0.19"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# UUID and time
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

# Crypto
jsonwebtoken = "9"
bcrypt = "0.15"
rand = "0.8"

# gRPC
tonic = "0.11"
tonic-reflection = "0.11"

# Tracing / Observability
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
opentelemetry = "0.20"
opentelemetry-jaeger = { version = "0.20", features = ["rt-tokio"] }
tracing-opentelemetry = "0.21"

# Error handling
thiserror = "1"
anyhow = "1"

# Validation
validator = { version = "0.16", features = ["derive"] }

# Logging
log = "0.4"
env_logger = "0.10"

# Utils
regex = "1"
once_cell = "1.19"
lazy_static = "1.4"
hex = "0.4"
sha2 = "0.10"

[build-dependencies]
tonic-build = "0.11"

[lib]
name = "auth_service"
path = "src/lib.rs"

[[bin]]
name = "auth-service"
path = "src/main.rs"
