[package]
name = "auth-service"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "auth-service"
path = "src/main.rs"

[dependencies]
# Web framework
actix-web = { workspace = true }
actix-rt = { workspace = true }
tokio = { version = "1.36", features = ["full"] }

# Async runtime (supports both Actix and Tokio for gRPC)

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Database
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono", "migrate"] }

# Redis
redis = { version = "0.25", features = ["tokio-comp", "connection-manager", "streams"] }

# Utilities
uuid = { version = "1.7", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
dotenv = "0.15"
envy = "0.4"
once_cell = "1.19"
prometheus = { workspace = true }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Security
jsonwebtoken = "9.2"
argon2 = "0.5"
rand = "0.8"
sha2 = "0.10"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# gRPC
tonic = { version = "0.11", features = ["transport"] }
prost = "0.12"

# HTTP client for OAuth
reqwest = { version = "0.12", features = ["json"] }
urlencoding = "2.1"
base64 = "0.22"

# TOTP (2FA)
totp-lite = "2.0"
qrcode = "0.12"
image = "0.24"

# Validation
validator = { version = "0.18", features = ["derive"] }
regex = "1.10"
zxcvbn = "2"

# Async traits
async-trait = "0.1"

# Kafka event streaming
rdkafka = { version = "0.36", features = ["tokio", "cmake-build"] }

# Shared libraries
error-types = { path = "../libs/error-types" }
event-schema = { path = "../libs/event-schema" }
crypto-core = { path = "../libs/crypto-core" }
redis-utils = { path = "../libs/redis-utils" }
actix-middleware = { path = "../libs/actix-middleware" }
db-pool = { path = "../libs/db-pool" }

# API documentation
utoipa = { version = "4", features = ["chrono", "uuid"] }
utoipa-swagger-ui = { version = "5", features = ["actix-web"] }

[build-dependencies]
tonic-build = "0.11"

[dev-dependencies]
tokio-test = "0.4"
testcontainers = "0.17"
