[package]
name = "communication-service"
version = "2.0.0"
edition = "2021"

[dependencies]
# Core
tokio = { version = "1.35", features = ["full"] }
anyhow = "1.0"
thiserror = "1.0"

# gRPC
tonic = "0.10"
prost = "0.12"

# Database
sqlx = { version = "0.7", features = ["runtime-tokio", "postgres", "chrono", "uuid"] }
db-pool = { path = "../libs/db-pool" }

# Events
rdkafka = { version = "0.36", features = ["cmake-build"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# WebSocket for real-time
tokio-tungstenite = "0.21"

# Push notifications
fcm = "0.9"  # Firebase Cloud Messaging
apns = "0.10"  # Apple Push Notification Service

# Email
lettre = "0.11"
lettre_email = "0.9"

# Caching
redis = { version = "0.25", features = ["aio", "tokio-comp"] }
dashmap = "6.1"

# Utilities
uuid = { version = "1.6", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
async-trait = "0.1"

# Observability
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
prometheus = "0.13"

# Configuration
config = "0.14"
dotenv = "0.15"

# Resilience
resilience = { path = "../libs/resilience" }

[build-dependencies]
tonic-build = "0.10"

[dev-dependencies]
mockall = "0.12"