[package]
name = "content-service"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
rust-version.workspace = true

[[bin]]
name = "content-service"
path = "src/main.rs"

[lib]
name = "content_service"
path = "src/lib.rs"

[dependencies]
# Workspace dependencies
actix-web.workspace = true
actix-rt.workspace = true
actix-cors.workspace = true
actix = "0.13"
actix-web-actors = "4.3"
actix-http = "3.9"
tokio.workspace = true
sqlx.workspace = true
redis.workspace = true
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
chrono.workspace = true
dotenvy.workspace = true
envy.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tracing-actix-web.workspace = true
thiserror.workspace = true
anyhow.workspace = true
rand.workspace = true
validator.workspace = true
prometheus.workspace = true
once_cell = "1.19"
aws-config.workspace = true
aws-sdk-s3.workspace = true
sha1.workspace = true
sha2.workspace = true
hex.workspace = true
mime.workspace = true
base64.workspace = true
rdkafka.workspace = true
async-trait.workspace = true
reqwest.workspace = true
urlencoding.workspace = true
clickhouse.workspace = true
utoipa.workspace = true
utoipa-swagger-ui = { version = "9", features = ["actix-web"] }

# Resilience (P0-5)
resilience = { path = "../libs/resilience" }
grpc-tls = { path = "../libs/grpc-tls" }  # ✅ P0: mTLS for service-to-service auth

# Shared libraries
crypto-core = { path = "../libs/crypto-core" }
error-types = { path = "../libs/error-types" }
redis-utils = { path = "../libs/redis-utils" }
db-pool = { path = "../libs/db-pool" }
grpc-metrics = { path = "../libs/grpc-metrics" }
grpc-clients = { path = "../libs/grpc-clients" }
transactional-outbox = { path = "../libs/transactional-outbox" }
opentelemetry-config = { path = "../libs/opentelemetry-config" }
rustls = { version = "0.23", default-features = false, features = ["aws-lc-rs"] }

# Service-specific dependencies
futures = "0.3"
futures-util = "0.3"
lazy_static = "1.4"
actix-multipart = "0.7"
image = "0.24"
regex = "1"

# gRPC (for inter-service communication)
tonic.workspace = true
prost.workspace = true
tonic-health.workspace = true
prost-types = "0.12"

[build-dependencies]
tonic-build = "0.12"

[dev-dependencies]
tokio-test = "0.4"
mockall = "0.12"
actix-http = "3.9"
tempfile = "3.8"
testcontainers.workspace = true
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "feed_ranking_bench"
harness = false
