[package]
name = "feature-store"
version = "0.1.0"
edition = "2021"

[dependencies]
# Workspace dependencies
actix-web = { workspace = true }
tokio = { workspace = true }
sqlx = { workspace = true }
redis = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
config = { workspace = true }
dotenvy = { workspace = true }

# gRPC dependencies
tonic = { workspace = true }
prost = { workspace = true }
tonic-health = { workspace = true }
tonic-reflection = "0.12"

# Feature-specific dependencies
ndarray = "0.16"  # Vector operations for feature vectors
tract-onnx = "0.21"  # ONNX model serving

# ClickHouse client
clickhouse = { version = "0.12", features = ["watch", "uuid", "time"] }

# Shared internal libraries
error-types = { path = "../libs/error-types" }
db-pool = { path = "../libs/db-pool" }
grpc-tls = { path = "../libs/grpc-tls" }
resilience = { path = "../libs/resilience" }
redis-utils = { path = "../libs/redis-utils" }

# Additional utilities
futures = "0.3"
async-trait = "0.1"
lazy_static = "1.5"

[build-dependencies]
tonic-build = "0.12"

[dev-dependencies]
mockall = "0.13"
wiremock = "0.6"

[[bin]]
name = "feature-store"
path = "src/main.rs"

[lib]
name = "feature_store"
path = "src/lib.rs"
